--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="float">
             <label>Fascia d'età</label>
             <select id="form-eta">
-              <option value="aggiorenne">Maggiorenne</option>
+              <option value="maggiorenne">Maggiorenne</option>
               <option value="minorenne">Minorenne</option>
               <option value="over">Over65</option>
             </select>
@@ -45,7 +45,7 @@
         </div>
       </section>
 
-      <section id="biglietto" class="bg-yellow">
+      <section id="biglietto" class="bg-yellow hidden">
         <h1>Il Tuo Biglietto</h1>
 
         <h2>Dettaglio passeggeri</h2>
@@ -53,10 +53,10 @@
           <p>Nome Passeggero:<span id="bigl-nome"></span></p>
         </div>
         <div class="biglietto-stampato">
-          <p>Offerta <span id="bilg-offerta"></span></p>
-          <p>Carrozza <span id="bigl-carrozza"></span> </p>
-          <p>Codice cp <span id="bigl-codicecp"></span> </p>
-          <p>Costo <span id="bigl-costo"></span> </p>
+          <p>Offerta:<span id="bigl-offerta"></span></p>
+          <p>Carrozza:<span id="bigl-carrozza"></span> </p>
+          <p>Codice cp: <span id="bigl-codicecp"></span></p>
+          <p>Costo: <span id="bigl-costo"></span> </p>
 
         </div>
 
