--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
             <label>Nome Cognome</label>
             <input id="form-nome" type="text">
           </div>
-
           <div class="float">
             <label>Km da percorrere</label>
             <input id="form-km" type="text">
           </div>
-
           <div class="float">
             <label>Fascia d'età</label>
             <select id="form-eta">
@@ -33,9 +31,7 @@
               <option value="minorenne">Minorenne</option>
               <option value="over">Over65</option>
             </select>
-
           </div>
-
 
           <!-- BOTTONI -->
           <div class="bottoni">
@@ -45,6 +41,7 @@
         </div>
       </section>
 
+      <!-- BIGLIETTO -->
       <section id="biglietto" class="bg-yellow hidden">
         <h1>Il Tuo Biglietto</h1>
 
@@ -57,14 +54,9 @@
           <p>Carrozza:<span id="bigl-carrozza"></span> </p>
           <p>Codice cp: <span id="bigl-codicecp"></span></p>
           <p>Costo: <span id="bigl-costo"></span> </p>
-
         </div>
-
       </section>
-
-
     </main>
-
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
